--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
+      
+#   docker:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           node-version: 12   
+#       - run: echo "docker tag and build"
 
 
 #   publish-npm:
